# taos-connector-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README-CN.md  README.md  a.sh  cliff.toml  codecov.yml  deny.toml  note.txt  release.toml  rust-toolchain.toml  rustfmt.toml
mdsn/: CHANGELOG.md  Cargo.toml  README.md
mdsn/benches/: regex-vs-pest.rs  regex_vs_pest.rs
mdsn/examples/: demo.rs
mdsn/src/: dsn.pest  lib.rs
taos/: CHANGELOG.md  Cargo.toml
taos-error/: CHANGELOG.md  Cargo.toml  README.md  build.rs
taos-error/examples/: raise_error.rs
taos-error/src/: lib.rs  source.rs  taoserror.h
taos-error/src/code/: constants.rs  mod.rs
taos-log/: Cargo.toml  README.md
taos-log/examples/: layers.rs  rotate.rs
taos-log/src/: layer.rs  lib.rs  middleware.rs  utils.rs  writer.rs
taos-macros/: CHANGELOG.md  Cargo.toml
taos-macros/examples/macros-demo/: Cargo.toml
taos-macros/examples/macros-demo/src/: lib.rs
taos-macros/src/: cfg.rs  lib.rs  test.rs
taos-macros/tests/: taos_cfg.rs  test.rs
taos-optin/: CHANGELOG.md  Cargo.toml  docker-compose.yml
taos-optin/benches/: is_null.rs
taos-optin/src/: ffi.rs  into_c_str.rs  lib.rs  set_config.rs
taos-optin/src/conn/: mod.rs
taos-optin/src/query/: blocks.rs  future.rs  mod.rs  raw_res.rs
taos-optin/src/raw/: exec_future.rs  mod.rs  query_future.rs
taos-optin/src/stmt/: bind.rs  mod.rs  multi.rs
taos-optin/src/stmt2/: bind.rs  mod.rs
taos-optin/src/tmq/: ffi.rs  mod.rs  raw.rs
taos-optin/src/types/: field.rs  mod.rs  tmq.rs
taos-optin/tests/: info.rs  query.rs  query_a.rs  query_with_req_id.rs  raw_block.rs  test_stmt2.rs
taos-optin/tests/cfg/v2/: taos.cfg
taos-optin/tests/cfg/v3/: taos.cfg
taos-query/: CHANGELOG.md  Cargo.toml  README.md  cobertura.xml  lcov.info  tarpaulin-report.html  tarpaulin-report.json
taos-query/src/: lib.rs  prelude.rs
taos-query/src/common/: decimal.rs  describe.rs  field.rs  itypes.rs  mod.rs  opts.rs  precision.rs  timestamp.rs  ty.rs  value.rs
taos-query/src/common/column/: mod.rs
taos-query/src/common/raw/: data.rs  de.rs  inner.rs  layout.rs  (+5 more)
taos-query/src/de/: mod.rs
taos-query/src/helpers/: database.rs  describe.rs  mod.rs  topic.rs
taos-query/src/insert/: mod.rs
taos-query/src/iter/: mod.rs
taos-query/src/stmt/: column.rs  mod.rs
taos-query/src/stmt2/: mod.rs
taos-query/src/tmq/: mod.rs
taos-query/src/util/: endian.rs  hex.rs  inline_bytes.rs  inline_json.rs  inline_nchar.rs  inline_read.rs  inline_str.rs  inline_write.rs  mod.rs  req_id.rs  reqid.rs  test_utils.rs  totp.rs  ws_proxy.rs
taos-query/tests/: test.txt
taos-sys/: CHANGELOG.md  Cargo.toml  build.rs  cfg2api.md
taos-sys/benches/: is_null.rs
taos-sys/src/: ffi.rs  into_c_str.rs  lib.rs  query.rs  schemaless.rs  set_config.rs  sml.rs  stmt.rs  stub.rs  tmq.rs
taos-sys/src/conn/: mod.rs
taos-sys/src/query/: blocks.rs  future.rs  message.rs  mod.rs  old.rs  raw_res.rs
taos-sys/src/stmt/: bind.rs  mod.rs  multi.rs
taos-sys/src/tmq/: ffi.rs  mod.rs  raw.rs
taos-sys/src/types/: field.rs  mod.rs
taos-sys/tests/: info.rs  query.rs  query_with_req_id.rs  raw_block.rs
taos-ws/: CHANGELOG.md  Cargo.toml  build.rs
taos-ws-sys/: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  build.rs  cbindgen.toml  cbindgen_ws.toml
taos-ws-sys/ci/: package.sh
taos-ws-sys/examples/: .gitignore  Makefile  show-databases.c  test.c  ws-basic.c  ws-bind.c  ws-cloud.c  ws-err-code.c  ws-fetch-row.c  ws-get-err.c  ws-interface.c  ws-muti-bind.c  ws-run-sql.c  ws-schemaless.c  ws-table-muti-bind.c  ws-tmq-all.c  ws-tmq-basic.c
taos-ws-sys/src/: lib.rs  stmt.rs  stub.rs  tmq.rs
taos-ws-sys/src/native/: error.rs  mod.rs  query.rs  result_set.rs  sml.rs  stmt.rs  stmt2.rs  stub.rs  tmq.rs
taos-ws-sys/src/old_ws/: mod.rs  stmt.rs  tmq.rs
taos-ws-sys/src/taos/: mod.rs  query.rs  sml.rs  stmt.rs  stmt2.rs  tmq.rs
taos-ws-sys/src/ws/: config.rs  error.rs  mod.rs  query.rs  sml.rs  stmt.rs  stmt2.rs  stmt_.rs  stub.rs  tmq.rs  tz.rs  util.rs
taos-ws-sys/tests/: Makefile  taos.cfg  test.c  test_native.c  test_tls.rs  test_tls_required.rs  test_tls_verify_ca.rs  test_tls_verify_ca_pem.rs  test_tls_verify_identity.rs  test_tls_verify_identity_pem.rs  test_tmq.c
taos-ws-sys/tests/certs/: ca_verify_identity.crt
taos-ws-sys/tests/cfg/: taos.cfg  test_tls.cfg  test_tls_disabled.cfg  test_tls_required.cfg  test_tls_verify_ca.cfg  test_tls_verify_ca_pem.cfg  test_tls_verify_identity.cfg  test_tls_verify_identity_pem.cfg
taos-ws/src/: asyn.rs  deflate.rs  infra.rs  lib.rs  sync.rs
taos-ws/src/client/: mod.rs
taos-ws/src/consumer/: conn.rs  messages.rs  mod.rs  sync.rs
taos-ws/src/query/: asyn.rs  conn.rs  infra.rs  messages.rs  mod.rs  sync.rs
taos-ws/src/schemaless/: infra.rs  mod.rs
taos-ws/src/stmt/: messages.rs  mod.rs  sync.rs
taos-ws/src/stmt2/: bind.rs  bind2.rs  messages.rs  mod.rs
taos-ws/src/tmq/: message.rs  mod.rs
taos-ws/src/ws/: mod.rs
taos-ws/tests/: invalid.pem  nginx_tlsv12.conf  nginx_tlsv13.conf  nginx_verify_ca.conf  nginx_verify_identity.conf
taos-ws/tests/certs/: ca_mismatch.crt  ca_verify_ca.crt  server_verify_ca.crt  server_verify_ca.key  server_verify_identity.crt  server_verify_identity.key
taos-ws/tests/nginx/: tls12.conf  tls13.conf  verify_ca.conf  verify_identity.conf
taos/benches/: benchmark.rs  query.rs  sql.rs  sql2.rs  sql_interlace.rs  sql_native_interlace.rs  sql_ws_interlace.rs  stmt.rs  stmt2.rs  stmt2_interlace.rs  stmt_interlace.rs  tmq.rs
taos/examples/: bind-tags.rs  bind.rs  create-database-sync.rs  create-database.rs  helper.rs  information.rs  json-meta-tags-empty-str.rs  query.rs  raw-dump.rs  raw-restore.rs  sql.rs  sql_native.rs  sql_ws_interlace.rs  stmt.rs  stmt2.rs  stmt2_interlace.rs  subscribe.rs  tmq-block.rs  ts5250-builder.rs  ts5250.rs
taos/src/: lib.rs  query.rs  stmt.rs  stmt2.rs  tmq.rs
taos/tests/: query-error.rs  sql.rs  sql_native_interlace.rs  sql_ws_interlace.rs  stmt.rs  stmt2.rs  stmt2_interlace.rs  stmt_interlace.rs  test_deadpool.rs  test_r2d2.rs  tmq-sync.rs  tmq_sync.rs
(+71 files in other folders)
