[workspace]
members = [
  "mdsn",
  "taos-error",
  "taos-query",
  "taos-macros",
  "taos-sys",
  "taos-ws",
  "taos-ws-sys",
  "taos-ws-py",
]

[package]
name = "taos"
version = "0.2.7"
categories = ["database", "api-bindings", "asynchronous"]
edition = "2021"
keywords = ["timeseries", "database", "tdengine", "taosdata", "connection"]
license = "MIT OR Apache-2.0"
description = "Driver for TDengine - a timeseries database and analysis platform"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
features = ["ws"]
no-default-features = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
taos-query = { path = "./taos-query", version = "0.2.5" }
taos-sys = { path = "./taos-sys", version = "0.2.2", optional = true }
taos-ws = { path = "./taos-ws", version = "0.2.4", optional = true }
thiserror = "1"

[dev-dependencies]
chrono = "0.4"
itertools = "0.10.3"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["ws", "native", "r2d2"]
ws = ["taos-ws"]
native = ["taos-sys"]
r2d2 = ["taos-query/r2d2"]
test = []
