[workspace]
members = [
  "mdsn",
  "taos-error",
  "taos-query",
  "taos-macros",
  "taos-optin",
  "taos-sys",
  "taos-ws",
  "taos-ws-sys",
  "taos",
]

[workspace.package]
edition = "2021"
version = "0.8.6"
authors = ["Linhe Huo <linhe.huo@gmail.com>"]
categories = ["database", "api-bindings", "asynchronous"]
keywords = ["timeseries", "database", "tdengine", "taosdata", "connection"]
license = "MIT OR Apache-2.0"
description = "Driver for TDengine - a timeseries database and analysis platform"
documentation = "https://docs.rs/taos"
homepage = "https://tdengine.com"
repository = "https://github.com/taosdata/taos-connector-rust.git"
readme = "./README.md"
rust-version = "1.65"
