[workspace]
members = [
  "mdsn",
  "taos-error",
  "taos-query",
  "taos-macros",
  "taos-optin",
  "taos-sys",
  "taos-ws",
  "taos-ws-sys",
  "taos",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.11.1"

authors = ["Linhe Huo <linhe.huo@gmail.com>"]
categories = ["database", "api-bindings", "asynchronous"]
description = "Driver for TDengine - a timeseries database and analysis platform"
documentation = "https://docs.rs/taos"
homepage = "https://tdengine.com"
keywords = ["timeseries", "database", "tdengine", "taosdata", "connection"]
license = "MIT OR Apache-2.0"
readme = "./README.md"
repository = "https://github.com/taosdata/taos-connector-rust.git"
rust-version = "1.65"
