[package]
name = "mdsn"
version = "0.2.4"
edition = "2021"
keywords = ["url", "dsn", "mdsn"]
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "M-DSN: A Multi-address DSN(Data Source Name) parser."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
itertools = "0.10.3"
thiserror = "1.0.30"
urlencoding = "2.1.0"

[dev-dependencies]
coverage-helper = "0.1"
