[package]
name = "taos-error"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
mdsn = { path = "../mdsn", version = "0.2.11" }
thiserror = "1.0"

[build-dependencies]
rustc_version = "0.4.0"
regex = "1"
heck = "0.4.0"

[features]
default = ["serde"]
# backtrace = []
