[package]
name = "taos-error"

authors.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
derive_more = "0.99"
mdsn = {path = "../mdsn", version = "0.2.19" }
serde = {version = "1", features = ["derive"], optional = true}
thiserror = "1.0.47"
anyhow = { version = "1", features = ["backtrace"] }

[build-dependencies]
rustc_version = "0.4.0"

[features]
default = ["serde"]
