[package]
name = "taos-macros"
version = "0.2.15"
edition = "2021"
keywords = ["taos", "TDengine", "proc-macro"]
license = "MIT OR Apache-2.0"
description = "TDengine connector internal macros"
private = true
documentation = "https://taosdata.com"
homepage = "https://taosdata.com"
repository = "https://github.com/taosdata/taos-connector-rust"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1.0.18"
syn = { version = "1", features = ["full"] }

[dev-dependencies]
anyhow = "1"
log = "0.4"
tokio = "1"
