[package]
name = "taos-sys"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
bytes = "1.2"
bitvec = "1.0"
bstr = "0.2.17"
cfg-if = "1.0.0"
derive_more = "0.99"
futures = "0.3.21"
itertools = "0.10"
log = "0.4.16"
num_enum = "0.5.7"
once_cell = "1.10.0"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1.0"
serde_repr = { version = "0.1.7", optional = true }
# taos-error = { path = "../taos-error", version = "0.2.9" }
taos-macros = { path = "../taos-macros", version = "0.*" }
taos-query = { path = "../taos-query", version = "0.9.5" }

[build-dependencies]
dotenv = "0.15.0"
# libloading = "0.7.3"
dlopen2 = "0.4.1"

[dev-dependencies]
anyhow = "1"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }

[features]
default = ["backport"]
backport = []
serde1 = ["serde", "serde_repr"]
