[package]
name = "taos-ws-sys"
version = "0.2.1"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "taosws"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
bytes = "1.1.0"
pretty_env_logger = "0.5.0"
serde_json = "1"
taos-error = { path = "../taos-error" }
taos-query = { path = "../taos-query" }
taos-ws = { path = "../taos-ws" }
futures = { version = "0.3", features = ["executor"] }
tracing = { version = "0.1", features = ["log"] }

[build-dependencies]
cbindgen = "0.27.0"

[dev-dependencies]
pretty_env_logger = "0.5.0"

[features]
default = ["rustls", "rustls-ring-crypto-provider"]

native-tls-vendored = ["taos-ws/native-tls-vendored"]
native-tls = ["taos-ws/native-tls"]
rustls = ["taos-ws/rustls"]
rustls-ring-crypto-provider = ["rustls", "taos-ws/rustls-ring-crypto-provider"]
rustls-aws-lc-crypto-provider = [
    "rustls",
    "taos-ws/rustls-aws-lc-crypto-provider",
]
