[package]
name = "taos-ws-sys"
version = "0.2.2"
edition = "2021"
publish = false

[lib]
name = "taosws"
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
bytes = "1.1.0"
byteorder = "1.5.0"
cargo_metadata = "0.18.1"
ctor = "0.2.9"
dashmap = "6.1.0"
dlopen2 = "0.7"
faststr = "0.2.31"
futures = { version = "0.3", features = ["executor"] }
itoa = "1.0.15"
lazy_static = "1.4.0"
libc = { version = "0.2", default-features = false }
once_cell = "1.20.2"
pretty_env_logger = "0.5.0"
rustls = "0.23.35"
ryu = "1.0.20"
serde_json = "1"
taos-error = { version = "0.12.4", path = "../taos-error" }
taos-log = { version = "0.1.0", path = "../taos-log" }
taos-query = { version = "0.12.4", path = "../taos-query", default-features = false, features = [
    "async",
] }
taos-ws = { version = "0.12.4", path = "../taos-ws" }
tokio = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", default-features = false, features = [
    "env-filter",
] }

[build-dependencies]
cbindgen = "0.27.0"
syn = { version = "2.0.91", features = ["full", "visit"] }

[dev-dependencies]
flume = "0.11"
rand = "0.9.1"
taos-query = { version = "0.12.4", path = "../taos-query", default-features = false, features = [
    "async",
    "test",
] }
tokio-tungstenite = { git = "https://github.com/taosdata/tokio-tungstenite.git", rev = "3420353" }

[features]
default = ["rustls", "rustls-ring-crypto-provider"]
rustls = ["taos-ws/rustls"]
native-tls = ["taos-ws/native-tls"]
native-tls-vendored = ["taos-ws/native-tls-vendored"]
rustls-ring-crypto-provider = ["rustls", "taos-ws/rustls-ring-crypto-provider"]
rustls-aws-lc-crypto-provider = [
    "rustls",
    "taos-ws/rustls-aws-lc-crypto-provider",
]
test-new-feat = []
