[package]
name = "taos-ws"

edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = { version = "0.1.80" }
bytes = "1.1.0"
dashmap = "6.1.0"
futures = { version = "0.3" }
itertools = "0.13.0"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_repr = "0.1.8"
serde_with = "3.0.0"
taos-query = { path = "../taos-query", version = "0.12.4" }
thiserror = "1.0.47"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
] }

tracing = { version = "0.1", features = ["log"] }
#sonic-rs = "0.3.6"
scc = "2.1.1"
flume = "0.11"
cfg-if = "1"

[dependencies.tokio-tungstenite]
git = "https://github.com/taosdata/tokio-tungstenite.git"
rev = "3420353"

[dev-dependencies]
pretty_env_logger = "0.5.0"
criterion = { version = "0.5.1", features = ["stable"] }
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
warp = "0.3.7"

[package.metadata.docs.rs]
features = ["rustls"]

[features]
default = ["tmq", "deflate"]

rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored", "native-tls"]
sync = []
tmq = []
deflate = ["tokio-tungstenite/deflate", "tokio-tungstenite/rustls-dangerous"]

rustls-aws-lc-crypto-provider = [
    "rustls",
    "tokio-tungstenite/rustls-aws-lc-crypto-provider",
]
rustls-ring-crypto-provider = [
    "rustls",
    "tokio-tungstenite/rustls-ring-crypto-provider",
]
