[package]
name = "taos-ws"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
readme.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
anyhow = "1"
async-trait = { version = "0.1.80" }
bytes = "1.1.0"
byteorder = "1.5.0"
cfg-if = "1"
chrono-tz = "0.10.4"
crossbeam = "0.8.4"
dashmap = "6.1.0"
faststr = "0.2.31"
flume = "0.11"
futures = { version = "0.3" }
futures-util = "0.3.31"
itertools = "0.13.0"
once_cell = "1"
rand = "0.9.1"
rustls = { version = "0.23.35", features = ["tls12"], default-features = false }
scc = "2.1.1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_repr = "0.1.8"
serde_with = "3.0.0"
taos-query = { version = "0.12.4", path = "../taos-query", default-features = false, features = [
    "async",
] }
thiserror = "1.0.47"
tokio = { version = "1", features = [
    "sync",
    "rt-multi-thread",
    "macros",
    "io-util",
    "time",
] }
tokio-util = "0.7.16"
tracing = { version = "0.1", features = ["log"] }

[dependencies.tokio-tungstenite]
git = "https://github.com/taosdata/tokio-tungstenite.git"
rev = "3420353"

[dev-dependencies]
pretty_env_logger = "0.5.0"
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
    "fmt",
] }
taos-query = { version = "0.12.4", path = "../taos-query", default-features = false, features = [
    "async",
    "test",
] }
warp = "0.3.7"

[package.metadata.docs.rs]
features = ["rustls"]

[features]
default = ["deflate"]
native-tls = ["tokio-tungstenite/native-tls"]
native-tls-vendored = ["tokio-tungstenite/native-tls-vendored", "native-tls"]
rustls = ["tokio-tungstenite/rustls-tls-native-roots"]
rustls-aws-lc-crypto-provider = [
    "rustls",
    "tokio-tungstenite/rustls-aws-lc-crypto-provider",
]
rustls-ring-crypto-provider = [
    "rustls",
    "tokio-tungstenite/rustls-ring-crypto-provider",
]
deflate = ["tokio-tungstenite/deflate", "tokio-tungstenite/rustls-dangerous"]
test-new-feat = []
test-enterprise = []
