[package]
name = "taos"

version.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
description.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
features = ["ws", "optin", "r2d2"]
no-default-features = true

[dependencies]
anyhow = "1"
async-trait = "0.1"
log = "0.4.17"
taos-optin = { path = "../taos-optin", version = "0.5.7", optional = true }
taos-query = { path = "../taos-query", version = "0.5.7" }
taos-sys = { path = "../taos-sys", version = "0.5.7", optional = true }
taos-ws = { path = "../taos-ws", version = "0.5.7", optional = true }
thiserror = "1"

[dev-dependencies]
chrono = "0.4"
itertools = "0.10.3"
log = "0.4"
pretty_env_logger = "0.4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[features]
default = ["ws-rustls", "native", "r2d2"]
ws = ["taos-ws"]
optin = ["taos-optin"]
native = ["taos-sys"]
r2d2 = ["taos-query/r2d2"]
ws-native-tls = ["ws", "taos-ws/native-tls-vendored"]
ws-rustls = ["ws", "taos-ws/rustls"]
