[package]
name = "taos"

authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
features = ["ws-rustls", "optin", "deadpool"]
no-default-features = true

[dependencies]
async-trait = "0.1"
log = "0.4.17"
taos-optin = { path = "../taos-optin", version = "0.10.19", optional = true }
taos-query = { path = "../taos-query", version = "0.10.19", default-features = false }
taos-sys = { path = "../taos-sys", version = "0.10.19", optional = true }
taos-ws = { path = "../taos-ws", version = "0.10.19", optional = true }
futures = { version = "0.3", features = ["executor"] }

[dev-dependencies]
anyhow = "1"
async-trait = "0.1.68"
chrono = "0.4"
criterion = { version = "0.5", features = ["html_reports", "stable"] }
itertools = "0.11.0"
log = "0.4"
pretty_env_logger = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bench]]
harness = false
name = "benchmark"

[[bench]]
harness = false
name = "query"

[features]
deadpool = ["taos-query/deadpool"]
default = ["ws-rustls", "native", "deadpool"]
native = ["taos-sys"]
optin = ["taos-optin"]
r2d2 = ["taos-query/r2d2"]
ws = ["taos-ws"]
ws-native-tls = ["ws", "taos-ws/native-tls-vendored"]
ws-rustls = ["ws", "taos-ws/rustls"]
